<resources>
    <string name="app_name">Cloud Print</string>
    <string name="title_activity_map">MapActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="selected_place">Last Selected Place:</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>


    <!-- icons -->
    <string name="navigation">&#xf0c9;</string>
    <string name="progress">&#xf110;</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="welcome_msg">Lets Get You Started!!</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Enter Email Address</string>
    <string name="mobno">Enter Mobile Number</string>
    <string name="pass">Enter Password</string>
    <string name="repass">ReEnter Password</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="share_title">Share with</string>

</resources>
