<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cloudprint.Activities.LoginActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="74dp"
        android:ems="10"
        android:hint="@string/email"
        android:text="kushalmalani@gmail.com"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/mobno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerInParent="true"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:text="5125786728"
        android:hint="@string/mobno"
        android:inputType="number" >
    </EditText>

    <EditText
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobno"
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_centerInParent="true"
        android:layout_below="@+id/pass"
        android:layout_marginTop="73dp"
        android:padding="10dp"
        android:background="#F58CDE"
        android:text="@string/login"
        android:textSize="30sp" />



</RelativeLayout>
